--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 This is the homepage
 
-<a href="/another-page.html">Link to a different page</a>
+<a href="/test-3/another-page.html">Link to a different page</a>
